package com.cookingchef.controller;

import javafx.fxml.FXML;

public class PartnerController {
  @FXML
  private String searchString;
  
}
